[package]
name = "oxi"
version = "0.1.0"
edition = "2021"

[dependencies]
structopt = "0.3.26"
anyhow = "1.0.79"
tokio = { version = "1.35.1", features = ["rt-multi-thread", "macros", "fs"] }
tracing = "0.1.41"
tracing-subscriber = { version = "0.3.19", features = ["env-filter"] }
toml = "0.9.0"
serde = { version = "1.0", features = ["derive"] }
